Fix footer overflow

--- a/src/Components/Footer/Footer.module.css
+++ b/src/Components/Footer/Footer.module.css
@@ -2,7 +2,7 @@
     background: #111b11;
     width: 100%;
     height: 2.5rem;
-    padding: .5rem;
+    padding: .5rem 0;
     color: #fff;
     display: flex;
     justify-content: space-evenly;
@@ -10,6 +10,5 @@
     font-size: .9em;
     position: absolute;
     bottom: 0;
-    width: 100%;
     z-index: 2;
 }
